--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nextlaunch",
+  "name": "shieldify",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "postinstall": "prisma generate"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.js"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.14",
     "@hookform/resolvers": "^3.9.0",
@@ -17,13 +20,16 @@
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-hover-card": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@react-email/components": "0.0.25",
     "@stripe/stripe-js": "^2.0.0",
@@ -32,6 +38,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^11.11.17",
     "lucide-react": "^0.453.0",
     "next": "14.2.16",
     "next-auth": "^4.24.5",
@@ -40,6 +47,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-dropzone": "^14.2.10",
+    "react-easy-crop": "^5.1.0",
     "react-hook-form": "^7.53.1",
     "react-icons": "^5.3.0",
     "resend": "^4.0.0",
@@ -51,7 +59,7 @@
     "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.17.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
@@ -61,6 +69,7 @@
     "prisma": "^5.22.0",
     "react-email": "3.0.1",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.3"
   }
 }
